# HEDGEHOG

./: .gitignore  GO_term_comm.r  LICENSE  README.md  Run_eland.ipynb  pyproject.toml  test_clustering.rmd
bihidef/: bihidef.py
eland/: __init__.py  filter_panda.py  process_bihidef.py  process_panda.py
hedgehog/: process_panda.py
logo/: HEDGEHOG.eps
